# fastapi-study

./: README.md  pyproject.toml
day1/: path_param.py
week1/: homework.py  query_param.py
week2/: cookie.py  extra_models.py  fields.py  header_params.py  multiple_parameters.py  nested.py  numeric_validations.py  request_body.py  request_example.py  response_model.py  response_status_code.py  string_validations.py
